<resources>

    <string name="app_name">StoryApp</string>
    <string name="Login">Login</string>
    <string name="password_minimum_character">Password must have at least 8 characters</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Create an Account</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="scroll_view">this is scroll view</string>
    <string name="hi_there">Hey there !</string>
    <string name="description">Description</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps Button</string>
    <string name="logout">Logout Button</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>

</resources>