<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll_view"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".view.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.signup.SignUpActivity">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.854"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textSize="28sp"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="272dp"
            android:layout_height="178dp"
            android:layout_marginTop="136dp"
            android:src="@drawable/dicoding_story_app"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/sign_up_name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:alpha="0"
            tools:alpha="1"
            android:paddingTop="20dp"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/sign_up_email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_name" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/sign_up_password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:alpha="0"
            tools:alpha="1"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/register"
            android:alpha="0"
            tools:alpha="1"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_password"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/sign_up_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
            app:layout_constraintVertical_bias="0.614" />

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/already_have_account"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Login"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>