<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll_view"
    tools:context=".view.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.LoginActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.817"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="272dp"
            android:layout_height="178dp"
            android:layout_marginTop="120dp"
            android:alpha="0"
            tools:alpha="1"
            android:src="@drawable/dicoding_story_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/login_email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="280dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <Button
            android:id="@+id/Login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/Login"
            android:alpha="0"
            tools:alpha="1"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintVertical_bias="0.705" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_dont_have_account"
            app:layout_constraintTop_toBottomOf="@+id/Login_button" />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dont_have_account"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintStart_toStartOf="@+id/Login_button"
            app:layout_constraintTop_toBottomOf="@+id/Login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>