<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll_view"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".view.addStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.addStory.AddStoryActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702"
            tools:visibility="visible" />



        <androidx.cardview.widget.CardView
            android:id="@+id/cv_preview_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <ImageView
                android:id="@+id/iv_preview_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image"
                android:transitionName="photo"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_button"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/galery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_button"
            android:text="@string/camera"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
            app:layout_constraintVertical_bias="0.176" />

        <com.renald.storyapp.customUI.TextField
            android:id="@+id/tv_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:hint="@string/description"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textColorHint="?attr/colorOnPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="272dp"
            android:background="@drawable/bg_button"
            android:text="@string/upload"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_story"
            android:fontFamily="@font/poppins_bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/cv_preview_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>