<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">


  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:elevation="2dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.523"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.426"
      tools:visibility="visible" />

  <TextView
      android:id="@+id/tv_hi_there"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="16dp"
      android:layout_marginRight="20dp"
      android:fontFamily="@font/poppins_bold"
      android:text="@string/hi_there"
      android:textSize="25sp"
      app:layout_constraintEnd_toStartOf="@+id/action_logout"
      app:layout_constraintHorizontal_bias="0.019"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:fontFamily="@font/poppins_regular"
      android:text="@string/name"
      android:textSize="15sp"
      android:textColor="?attr/colorOnSecondary"
      app:layout_constraintEnd_toEndOf="@+id/tv_hi_there"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/tv_hi_there"
      app:layout_constraintTop_toBottomOf="@+id/tv_hi_there" />

  <ImageButton
      android:contentDescription="@string/logout"
      android:id="@+id/action_logout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:src="@drawable/ic_exit"
      android:background="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/rv_story"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.175"
      tools:ignore="ContentDescription" />

  <ImageButton
      android:id="@+id/action_maps"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:contentDescription="@string/maps"
      android:src="@drawable/baseline_map_24"
      app:layout_constraintBottom_toBottomOf="@+id/action_logout"
      app:layout_constraintEnd_toStartOf="@+id/action_logout"
      app:layout_constraintHorizontal_bias="0.962"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/action_logout" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_story"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginLeft="15dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_name"
      app:layout_constraintVertical_bias="0.038" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_add_story"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_add"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.96"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.94"
      app:tint="?attr/colorOnSecondary"
      android:backgroundTint="?attr/colorPrimary"
      android:textColor="?attr/colorOnPrimarySurface"
      tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>